Closed Bug 15782 Opened 25 years ago Closed 25 years ago

.che doesn't get copied to new config after Create Copy option

Categories

(CCK Graveyard :: CCK-Wizard, defect, P3)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bmartin, Assigned: vparthas)

Details

Latest CCK Build dated: 10-07-99

Steps to reproduce:

1- Launch CCK (with more than one configuration)
2- Select an existing configuration
3- Select the Create a Copy button
4- Rename the configuration and select create new config button
5- Select Next

Results:

Original config's data is not viewable in UI, only the defaults appear.  I
checked the cck\Configs\ directory and found that the .che file is not getting
copied into the newly named configuration.
Status: NEW → ASSIGNED
Target Milestone: M11
Assignee: selmer → varada
Status: ASSIGNED → NEW
Varada, I think this is related to saving the cache after each page.
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
This has been fixed - there has to be an onEnter handler in the checklist.ini
with the Reload function for the root- default che file.
Status: RESOLVED → VERIFIED
Marking this Verified Fixed.
You need to log in before you can comment on or make changes to this bug.