fix for bug #15782 to save cache file in the respective directories and also to save after each page and to save the last used config name in the default che